--- a/css/common.css
+++ b/css/common.css
@@ -20,6 +20,7 @@ body {
 .center {
 	width: 1252px;
 	margin: 0 auto;
+	line-height: 150px;
 }
 
 /* размещаем элементы по сторонам */
@@ -38,7 +39,9 @@ img {
 }
 
 nav {
+	vertical-align: middle;
 	display: inline-block;
+	line-height: 1.2;
 }
 
 .topmenu > li {
@@ -51,7 +54,7 @@ nav {
 .popupmenu {
   position: absolute;
   z-index: 1;
-  transition: .5s ease-in-out;
+  transition: .2s ease-in-out;
   display: none;
   white-space: nowrap;
   top: 100%;
@@ -59,6 +62,7 @@ nav {
   background: #fff;
 }
 
+/* выводим меню при наведении */
 ul li:hover .popupmenu {
 	display: block;
 }
