--- a/css/common.css
+++ b/css/common.css
@@ -70,19 +70,17 @@ ul li:hover .popupmenu {
 /* задаём центрирование секции с флоатами */
 
 .first-float,
-.second-float {
+.second-float,
+.reviews {
 	width: 1252px;
 	margin: 0 auto;
 }
-/*  */
-.headline_txt > h3 {
-	padding-top: 64px;
-	margin: 0;
-}
+
 
 /* position for line */
 
 .line {
 	position: relative;
 	top: -5px;
+	margin-bottom: 30px;
 }
