--- a/css/module-grid.css
+++ b/css/module-grid.css
@@ -72,11 +72,11 @@
 /* с отступами */
 
 .module-grid--gutters {
-	margin: 0 -10px;
+	margin: 0 -20px;
 }
 
 .module-grid--gutters > * {
-	padding: 0 20px;
+	padding: 20px 20px;
 	box-sizing: border-box;
 	margin-bottom: 20px;
 }
